--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -5,7 +5,7 @@
 	<% @categories.each do |category| %>
 	<article class=' article'>
 		<hgroup>
-			<h2><%= category.name %></h2>
+			<h2><%= link_to category.name, category %></h2>
 		</hgroup>		
 	</article>
 	<% end %>
