--- a/app/assets/stylesheets/articles.css.scss
+++ b/app/assets/stylesheets/articles.css.scss
@@ -31,3 +31,16 @@
 {
 	opacity: 1;
 }
+.img-article
+{
+	max-width: 50%;
+	max-height: 400px;
+}
+.post
+{
+	text-align:center;
+}
+#article_body
+{
+	width:100%;
+}
