--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -11,7 +11,8 @@
     </div>
   <% end %>
   <%= f.input :title %>
-  <%= f.input :body %>
+  <%= render 'toolbar' %>
+  <%= f.input :body , rows: 30%>
   <%= f.input :category_list %>
 
   <div class='field'>
