--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -7,7 +7,7 @@
 		<hgroup>
 			<h2><%= article.title%></h2>
 		</hgroup>
-		<p><%= truncate(article.body, :length => 120, :separator => ' ') %></p>
+		<p><%= sanitize truncate(article.body, :length => 120, :separator => ' ') %></p>
 		<%= link_to 'Leer más', article %> | <%= time_ago_in_words(article.created_at)+' ago'  %>
 		<% if current_user %>
 			<% if article.user.id == current_user.id || current_user.id == 1 %>
