--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,8 @@
 	<nav class='navbar'>
 		<div class='navbar-inner'>
 			<div class='container'>
-				<a href="http://localhost:3000" class='brand'>E-coding</a>
+				<%= link_to 'E-coding', root_path, class:'brand'%>
+				
 				<ul class='nav'>
 					<li><%= link_to 'Articles', articles_path %></li>
 					<% if current_user %>
