--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,6 +9,10 @@
   <b>Mail:</b>
   <%= @user.email %>
 </p>
+<p>
+  <b>Acerca de:</b>
+  <%= @user.about %>
+</p>
 
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
