--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,6 +11,10 @@
  *= require_self
  *= require_tree .
 */
+body
+{
+	background-image: url("<%= asset_path('grid.png') %>"), repeat;
+}
 .btn
 {
 	margin: 10px;
