--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,17 +11,17 @@
 	<nav class='navbar'>
 		<div class='navbar-inner'>
 			<div class='container'>
-				<%= link_to 'E-coding', root_path, class:'brand'%>
 				
 				<ul class='nav'>
+					<li><%= link_to 'E-coding', root_path, class:'brand'%></li>
 					<li><%= link_to 'Articles', articles_path %></li>
+					<li><%= link_to 'Categories', categories_path %></li>
 					<% if current_user %>
 						<li><%= link_to 'Nuevo artículo', new_article_path%></li>
 						<li><%= link_to "log out #{current_user.username}", logout_path %></li>
                         <li><%= link_to 'Editar tu usuario', edit_user_path(current_user) %></li>
 					<% else %>
 						<li><%= link_to 'log in', login_path %></li>
-						<li><%= link_to 'Sign up', signup_path %></li>
 					<% end %>
 				</ul>
 			</div>
