--- a/app/assets/stylesheets/articles.css.scss.erb
+++ b/app/assets/stylesheets/articles.css.scss.erb
@@ -17,14 +17,13 @@
 	@return unquote($cadena);
 }
 
-$i : #4eb3d1;
-
+$i : #425c87;
 .page-header h1
 {
 	font-family: 'Open Sans', sans-serif;
 	font-size: 50px;
 	color: $i;
-	text-shadow:shadows($i,6),14px 1px 7px rgba(0,0,0,0.8);
+	text-shadow:shadows($i,6),14px 1px 5px rgba(0,0,0,0.5);
 	border-bottom: solid 1px #CCC;
 }
 .article{
@@ -61,7 +60,7 @@ $i : #4eb3d1;
 	&:hover
 	{
 		background: inherit;
-		text-shadow:2px 2px 5px #000;
+		text-shadow:2px 2px 1px #FFF;
 		.admin
 		{
 			font-weight: bolder;
