--- a/app/views/layouts/index_layout.html.erb
+++ b/app/views/layouts/index_layout.html.erb
@@ -10,6 +10,7 @@
 <body>
 	<section id='body'>
 		<div class='sidebar'>
+			<%= image_tag "e-coding.png", class: 'logo' %>
 			<nav class='navbar'>
 				<div class='navbar-inner'>
 					<div class='container'>
