--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,5 +1,6 @@
 <header class='page-header'>
 	<h1>Articles</h1>
+
 </header>
 <section id='articles_index' class='row-fluid'>
 	<% @articles.each do |article| %>
@@ -23,3 +24,4 @@
 	</article>
 	<% end %>
 </section>
+<%= will_paginate @articles, previous_label: "Atrás", next_label: "Adelante" %>
